--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -2,6 +2,7 @@ get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PAT
 
 set(jsons
   chxvm.json
+  chxvm_test.json
   )
 set(json_cs)
 
