--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(dump
   onnx_proto
   chainer_compiler_tools
   chainer_compiler_compiler
+  chainer_compiler_configs
   chainer_compiler_runtime
   chainer_compiler_common
   chainerx
@@ -52,6 +53,7 @@ target_link_libraries(run_onnx
   run_onnx_lib
   chainer_compiler_tools
   chainer_compiler_compiler
+  chainer_compiler_configs
   chainer_compiler_runtime
   chainer_compiler_common
   chainerx
@@ -83,6 +85,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     train_imagenet_lib
     chainer_compiler_tools
     chainer_compiler_compiler
+    chainer_compiler_configs
     chainer_compiler_runtime
     chainer_compiler_common
     feeder
@@ -110,6 +113,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     run_onnx_lib
     chainer_compiler_tools
     chainer_compiler_compiler
+    chainer_compiler_configs
     chainer_compiler_runtime
     chainer_compiler_common
     chainerx
@@ -135,6 +139,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       train_imagenet_lib
       chainer_compiler_tools
       chainer_compiler_compiler
+      chainer_compiler_configs
       chainer_compiler_runtime
       chainer_compiler_common
       feeder
