--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -7,12 +7,12 @@ set(jsons
 set(json_cs)
 
 foreach(json ${jsons})
-  set(out ${CMAKE_CURRENT_BINARY_DIR}/${json}.c)
+  set(out ${CMAKE_CURRENT_BINARY_DIR}/${json}.cc)
   add_custom_command(
     OUTPUT ${out}
-    COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/json_to_c.py ${CMAKE_CURRENT_SOURCE_DIR}/${json} > ${json}.tmp && mv ${json}.tmp ${out}
+    COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/json_to_cc.py ${CMAKE_CURRENT_SOURCE_DIR}/${json} > ${json}.tmp && mv ${json}.tmp ${out}
     MAIN_DEPENDENCY ${json}
-    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/json_to_c.py
+    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/json_to_cc.py
     )
   list(APPEND json_cs ${out})
 endforeach()
