Add backend configs for subgraphs

--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -3,6 +3,9 @@ get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PAT
 set(jsons
   chxvm.json
   chxvm_test.json
+  ngraph.json
+  nvrtc.json
+  tvm.json
   )
 set(json_cs)
 
