Link chainer_compiler_core.so against configs

--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(chainer_compiler_core.so
   chainer_compiler_compiler
   chainer_compiler_runtime
   chainer_compiler_common
+  chainer_compiler_configs
   chainerx
   onnx
   onnx_proto
