--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -99,6 +99,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${OpenCV_LIBS}
+    absl::variant
     )
   set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
 endif()
@@ -125,6 +126,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
+    absl::variant
     )
   set_target_properties(run_onnx_core.so
     PROPERTIES
@@ -153,6 +155,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       ${CHAINER_COMPILER_TVM_LIBRARIES}
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${OpenCV_LIBS}
+      absl::variant
       )
     set_target_properties(train_imagenet_core.so
       PROPERTIES
