--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -109,7 +109,7 @@ target_link_libraries(chainer_compiler_compiler_test
   chainer_compiler_runtime
   chainer_compiler_common
   chainer_compiler_configs
-  chainerx
+  ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
   onnx
   onnx_proto
   ${PROTOBUF_LIBRARY}
