--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,12 @@ before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake libopenblas-dev
   - sudo pip3 install gast numpy pytest onnxruntime==0.3.0
 
+before_script:
+  - export -f travis_nanoseconds
+  - export -f travis_fold
+  - export -f travis_time_start
+  - export -f travis_time_finish
+
 script:
   - bash ./scripts/run-travis-tests.sh
 
