--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -17,7 +17,7 @@ gen_onnx_by_onnx_chainer_(mnist_mlp)
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp > /dev/null
+  COMMAND PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp > /dev/null
   MAIN_DEPENDENCY gen_backprop_tests_pc.py
   DEPENDS ${ONNX_CHAINER_DEPS} ${CH2O_FILES}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
@@ -25,7 +25,7 @@ add_custom_command(
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_extra_test.py && touch ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp > /dev/null
+  COMMAND PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_extra_test.py && touch ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp > /dev/null
   MAIN_DEPENDENCY gen_extra_test.py
   DEPENDS onnx_script.py sentiment.py gen_chainercv_test.py chainercv_rpn.py
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
