Add CHAINER_COMPILER_DLDT_DIR flag to cmake

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -33,6 +33,7 @@ target_link_libraries(dump
   ${PROTOBUF_LIBRARY}
   pthread
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+  ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${OpenCV_LIBS}
@@ -61,6 +62,7 @@ target_link_libraries(run_onnx
   onnx_proto
   ${PROTOBUF_LIBRARY}
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+  ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   absl::variant
@@ -96,6 +98,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     ${PROTOBUF_LIBRARY}
     pthread
     ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+    ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${OpenCV_LIBS}
@@ -124,6 +127,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     ${PROTOBUF_LIBRARY}
     pthread
     ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+    ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     absl::variant
@@ -152,6 +156,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       ${PROTOBUF_LIBRARY}
       pthread
       ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+      ${CHAINER_COMPILER_DLDT_LIBRARIES}
       ${CHAINER_COMPILER_TVM_LIBRARIES}
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${OpenCV_LIBS}
