--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -118,6 +118,7 @@ target_link_libraries(chainer_compiler_compiler_test
   gtest_main
   pthread
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+  ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   absl::variant
