Generate builtin json getter with script

--- a/configs/CMakeLists.txt
+++ b/configs/CMakeLists.txt
@@ -1,16 +1,17 @@
 get_filename_component(CHAINER_COMPILER_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR} PATH)
 
 set(jsons
-  chxvm.json
-  chxvm_test.json
-  dldt.json
-  ngraph.json
-  nvrtc.json
-  tvm.json
+  chxvm
+  chxvm_test
+  dldt
+  ngraph
+  nvrtc
+  tvm
   )
 set(json_cs)
 
 foreach(json ${jsons})
+  set(json "${json}.json")
   set(out ${CMAKE_CURRENT_BINARY_DIR}/${json}.cc)
   add_custom_command(
     OUTPUT ${out}
@@ -21,6 +22,12 @@ foreach(json ${jsons})
   list(APPEND json_cs ${out})
 endforeach()
 
+add_custom_command(
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/load_json_from_name.cc
+  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_load_json_from_name.py ${jsons} > ${CMAKE_CURRENT_BINARY_DIR}/load_json_from_name.cc
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/gen_load_json_from_name.py ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
+  )
+
 include_directories(${CHAINER_COMPILER_ROOT_DIR})
 include_directories(${CHAINER_COMPILER_ROOT_DIR}/third_party/json/include)
 
@@ -29,6 +36,7 @@ add_library(
   ${json_cs}
   backend_config.cc
   json_repository.cc
+  ${CMAKE_CURRENT_BINARY_DIR}/load_json_from_name.cc
   )
 
 add_executable(
