--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake libopenblas-dev
-  - sudo pip3 install gast numpy pytest onnxruntime==0.3.0
+  - sudo pip3 install gast numpy pytest
 
 before_script:
   - export -f travis_nanoseconds
