Blacklist some onnx chainer generated tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,7 +234,7 @@ add_subdirectory(tools)
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/onnx_chainer_test_stamp
-  COMMAND PYTHONPATH=third_party/onnx-chainer pytest third_party/onnx-chainer/tests/functions_tests && touch ${CMAKE_CURRENT_BINARY_DIR}/onnx_chainer_test_stamp
+  COMMAND rm -rf "${CMAKE_CURRENT_SOURCE_DIR}/out/opset*" && PYTHONPATH=third_party/onnx-chainer pytest third_party/onnx-chainer/tests/functions_tests && touch ${CMAKE_CURRENT_BINARY_DIR}/onnx_chainer_test_stamp && python scripts/blacklist_onnx_chainer_tests.py
   DEPENDS
   third_party/onnx-chainer/tests/functions_tests/test_activations.py
   third_party/onnx-chainer/tests/functions_tests/test_arrays.py
@@ -244,6 +244,7 @@ add_custom_command(
   third_party/onnx-chainer/tests/functions_tests/test_noises.py
   third_party/onnx-chainer/tests/functions_tests/test_normalizations.py
   third_party/onnx-chainer/tests/functions_tests/test_poolings.py
+  scripts/blacklist_onnx_chainer_tests.py
   ${ONNX_CHAINER_DEPS}
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
   )
