--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,7 @@ if(NOT ("${CHAINER_COMPILER_DLDT_DIR}" STREQUAL "OFF"))
   add_definitions(-DCHAINER_COMPILER_ENABLE_DLDT=1)
   set(CHAINER_COMPILER_DLDT_INCLUDE_DIRS ${CHAINER_COMPILER_DLDT_DIR}/inference-engine/include)
   set(CHAINER_COMPILER_DLDT_LINK_DIRS ${CHAINER_COMPILER_DLDT_DIR}/inference-engine/bin/intel64/Release/lib)
-  set(CHAINER_COMPILER_DLDT_LIBRARIES inference_engine)
+  set(CHAINER_COMPILER_DLDT_LIBRARIES inference_engine ${CMAKE_DL_LIBS})
   link_directories(AFTER ${CHAINER_COMPILER_DLDT_LINK_DIRS})
 endif()
 
