add tvm lib link

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,8 +190,10 @@ endif()
 if(${CHAINER_COMPILER_ENABLE_TVM})
   add_definitions(-DCHAINER_COMPILER_ENABLE_TVM=1)
   set(CHAINER_COMPILER_TVM_INCLUDE_DIRS ${CHAINER_COMPILER_TVM_INCLUDE_DIRS} /usr/local/include/HalideIR)
+  set(CHAINER_COMPILER_TVM_LINK_DIRS ${CHAINER_COMPILER_TVM_DIR}/lib)
   set(CHAINER_COMPILER_TVM_LIBRARIES tvm)
   set(CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES tvm_runtime)
+  link_directories(AFTER ${CHAINER_COMPILER_TVM_LINK_DIRS})
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/onnx ${CMAKE_CURRENT_BINARY_DIR}/third_party/onnx)
