--- a/chainer_compiler_cc/CMakeLists.txt
+++ b/chainer_compiler_cc/CMakeLists.txt
@@ -4,7 +4,24 @@ include_directories(${CHAINER_COMPILER_ROOT_DIR}/third_party/abseil)
 include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${CMAKE_CURRENT_BINARY_DIR}/..)
 
+foreach(f cxx_args apply_cxx_args pybind_args)
+  add_custom_command(
+    OUTPUT
+    "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc"
+    COMMAND
+    python3 "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/gen_flags.py" --mode "chainer_compiler_core.${f}.inc"
+    --output "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc"
+    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/gen_flags.py"
+    )
+  list(APPEND CHAINER_COMPILER_CC_INC "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc")
+endforeach()
+add_custom_target(
+  chainer_compiler_cc_inc
+  DEPENDS ${CHAINER_COMPILER_CC_INC}
+  )
+
 add_library(_chainer_compiler_core.so MODULE chainer_compiler_core.cc)
+add_dependencies(_chainer_compiler_core.so chainer_compiler_cc_inc)
 target_link_libraries(_chainer_compiler_core.so
   PRIVATE
   chainer_compiler_tools
