--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -36,6 +36,7 @@ target_link_libraries(dump
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${OpenCV_LIBS}
   absl::variant
+  absl::optional
   )
 set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 
@@ -65,6 +66,7 @@ target_link_libraries(run_onnx
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   absl::variant
+  absl::optional
   )
 set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
 
@@ -102,6 +104,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${OpenCV_LIBS}
     absl::variant
+    absl::optional
     )
   set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
 endif()
@@ -130,6 +133,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     absl::variant
+    absl::optional
     )
   set_target_properties(run_onnx_core.so
     PROPERTIES
@@ -160,6 +164,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${OpenCV_LIBS}
       absl::variant
+      absl::optional
       )
     set_target_properties(train_imagenet_core.so
       PROPERTIES
