--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -93,6 +93,7 @@ target_link_libraries(chainer_compiler_runtime_test
   ${CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   absl::variant
+  absl::optional
   )
 
 add_test(
