Link absl library

--- a/feeder/CMakeLists.txt
+++ b/feeder/CMakeLists.txt
@@ -27,6 +27,8 @@ target_link_libraries(chainer_compiler_feeder_test
   pthread
   ${OpenCV_LIBS}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
+  absl::variant
+  absl::optional
   )
 
 add_test(
