--- a/chainer_compiler_cc/CMakeLists.txt
+++ b/chainer_compiler_cc/CMakeLists.txt
@@ -9,9 +9,9 @@ foreach(f cxx_args apply_cxx_args pybind_args)
     OUTPUT
     "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc"
     COMMAND
-    python3 "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/gen_flags.py" --mode "chainer_compiler_core.${f}.inc"
+    python3 "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/generate_flags_code.py" --mode "chainer_compiler_core.${f}.inc"
     --output "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc"
-    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/gen_flags.py"
+    DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../scripts/generate_flags_code.py"
     )
   list(APPEND CHAINER_COMPILER_CC_INC "${CMAKE_CURRENT_BINARY_DIR}/${f}.inc")
 endforeach()
