Start porting quantize.py in onnxruntime

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -90,6 +90,7 @@ add_library(chainer_compiler_compiler
   nvrtc_builder.cc
   onnx.cc
   passes.cc
+  quantize.cc
   scheduler.cc
   shape_evaluator.cc
   simplifier.cc
