--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -461,3 +461,4 @@ gen_elichika_test(node/Functions "${CHAINER_COMPILER_TEST_ALL}")
 gen_elichika_test(node/Functions/Activation "${CHAINER_COMPILER_TEST_ALL}")
 gen_elichika_test(node/Links "${CHAINER_COMPILER_TEST_ALL}")
 gen_elichika_test(syntax "${CHAINER_COMPILER_TEST_ALL}")
+gen_elichika_test(chainercv_model/resnet "${CHAINER_COMPILER_TEST_ALL}")
