Let ChxVM emitter depend on proto

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -25,7 +25,11 @@ add_custom_command(
   COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/chxvm/gen_chxvm_codegen.py
     --output-dir ${CMAKE_CURRENT_BINARY_DIR}
   MAIN_DEPENDENCY chxvm/gen_chxvm_codegen.py
-  DEPENDS ${CHAINER_COMPILER_COMMON_DIR}/codegen_util.py ${CHAINER_COMPILER_ROOT_DIR}/runtime/chxvm_defs.py)
+  DEPENDS
+  ${CHAINER_COMPILER_COMMON_DIR}/codegen_util.py
+  ${CHAINER_COMPILER_ROOT_DIR}/runtime/chxvm_defs.py
+  ${CHAINER_COMPILER_ROOT_DIR}/runtime/chxvm.proto.tmpl
+  )
 add_custom_target(
   compiler_chxvm_codegen_h
   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/gen_chxvm_codegen.h
