Fix the default values of NVTX/NVRTC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,12 +19,10 @@ include(third-party)
 #   else()
 #       option(FOO "Option FOO" OFF)
 #   endif()
-function(set_option_ var_ desc_ default_)
+function(set_option_ var_ desc_ def_)
   if(DEFINED ENV{${var_}})
     set(def_ $ENV{${var_}})
     message(STATUS "# ${var_} = $ENV{${var_}}")
-  else()
-    set(def_ default_)
   endif()
   option(${var_} ${desc_} ${def_})
 endfunction()
