--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -3,13 +3,17 @@ set(CHAINER_COMPILER_COMMON_DIR ${CHAINER_COMPILER_ROOT_DIR}/common)
 set(GOOGLETEST_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/googletest/googletest/include)
 set(GSLLITE_INCLUDE_DIRS ${CHAINER_COMPILER_ROOT_DIR}/gsl-lite/include)
 
+if(MSVC)
+    find_package(PythonInterp 3)
+endif()
+
 add_custom_command(
   OUTPUT
     ${CMAKE_CURRENT_BINARY_DIR}/gen_chxvm_ops.cc
     ${CMAKE_CURRENT_BINARY_DIR}/chxvm.pb.cc
     ${CMAKE_CURRENT_BINARY_DIR}/chxvm.pb.h
     ${CMAKE_CURRENT_BINARY_DIR}/gen_chxvm_ops.h
-  COMMAND python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_chxvm.py
+  COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen_chxvm.py
     --input-dir ${CMAKE_CURRENT_SOURCE_DIR}
     --output-dir ${CMAKE_CURRENT_BINARY_DIR}
     --protoc-exe ${PROTOC_EXECUTABLE}
