succeeded in compile excepts tests

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -19,8 +19,14 @@ target_link_libraries(chainer_compiler_common_test
   ${PROTOBUF_LIBRARY}
   gtest
   gtest_main
+  )
+
+if (!WIN32)
+  target_link_libraries(chainer_compiler_common_test
   pthread
   )
+endif()
+
 add_dependencies(chainer_compiler_common_test gen_onnx_proto)
 
 add_test(
