--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -38,7 +38,6 @@ target_link_libraries(dump
   onnx
   onnx_proto
   ${PROTOBUF_LIBRARY}
-  pthread
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -47,6 +46,13 @@ target_link_libraries(dump
   absl::variant
   absl::optional
   )
+
+if (!WIN32)
+  target_link_libraries(dump
+    pthread
+  )
+endif()
+
 set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 
 add_library(run_onnx_lib
@@ -77,6 +83,13 @@ target_link_libraries(run_onnx
   absl::variant
   absl::optional
   )
+
+if (WIN32)
+  target_link_libraries(run_onnx
+    Dbghelp
+  )
+endif()
+
 set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
 
 if(${CHAINER_COMPILER_ENABLE_OPENCV})
@@ -106,7 +119,6 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     onnx
     onnx_proto
     ${PROTOBUF_LIBRARY}
-    pthread
     ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
     ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -115,6 +127,13 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     absl::variant
     absl::optional
     )
+
+  if (!WIN32)
+    target_link_libraries(train_imagenet
+      pthread
+    )
+  endif()
+
   set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
 endif()
 
@@ -136,7 +155,6 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     onnx
     onnx_proto
     ${PROTOBUF_LIBRARY}
-    pthread
     ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
     ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -144,6 +162,13 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     absl::variant
     absl::optional
     )
+
+  if (!WIN32)
+    target_link_libraries(run_onnx_core.so
+      pthread
+    )
+  endif()
+
   set_target_properties(run_onnx_core.so
     PROPERTIES
     PREFIX "${PYTHON_MODULE_PREFIX}"
@@ -166,7 +191,6 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       onnx
       onnx_proto
       ${PROTOBUF_LIBRARY}
-      pthread
       ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
       ${CHAINER_COMPILER_DLDT_LIBRARIES}
       ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -175,6 +199,13 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       absl::variant
       absl::optional
       )
+
+  if (!WIN32)
+    target_link_libraries(train_imagenet_core.so
+      pthread
+    )
+  endif()
+
     set_target_properties(train_imagenet_core.so
       PROPERTIES
       PREFIX "${PYTHON_MODULE_PREFIX}"
